Added game move functionality, dev card functionality, private messaging channels, improved session handling and security. Added integration tests for User REST api endpoints, websocket chat, join and most game move channels