@@ -1,7 +1,6 @@
 package com.catan.catanbackend.model.dto;
 
 import com.catan.catanbackend.model.User;
-import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 
@@ -13,7 +12,7 @@ import java.util.stream.Collectors;
 @NoArgsConstructor
 public class JoinSessionNotification {
     public JoinSessionNotification(List<User> users) {
-        usernames = users.stream().map(User::getUsername).collect(Collectors.toList());
+        usernames = users.stream().map(User::getUsername).toList();
     }
 
     List<String> usernames = new ArrayList<>();
